manifests/istio/vcluster-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: vcluster
  namespace: istio-ingress
spec:
  selector:
    istio: ingress
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: PASSTHROUGH
    hosts:
    - "*"
    #- "vcluster-a.team-c.172.18.0.3.nip.io"
    #- "vcluster-b.team-c.172.18.0.3.nip.io"
