manifests/istio/vcluster-a-argod-vs.yaml
###
# ArgoCD deployed inside vcluster-a
###
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vcluster-argod-a-vs
  namespace: team-c
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingress/vcluster
  tls:
  - match:
    - port: 443
      sniHosts:
      - "argocd-vcluster-a.team-c.172.18.0.3.nip.io"
    route:
    - destination:
        host: argocd-apps-argocd-vcluster-a-server-x-argocd-x-vcluster-a
        port:
          number: 8443
