manifests/istio/vcluster-b-argod-vs.yaml
###
# ArgoCD deployed in vcluster-b
###
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vcluster-argod-b-vs
  namespace: team-c
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingress/vcluster
  tls:
  - match:
    - port: 443
      sniHosts:
      - "argocd-vcluster-b.team-c.172.18.0.3.nip.io"
    route:
    - destination:
        host: argocd-apps-argocd-vcluster-b-server-x-argocd-x-vcluster-b
        port:
          number: 8443
