manifests/istio/vcluster-vs-ab.yaml
###
# vClusters accessing point a/b
###
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vcluster-a-vs
  namespace: team-c
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingress/vcluster
  tls:
  - match:
    - port: 443
      sniHosts:
      - "vcluster-a.team-c.172.18.0.3.nip.io"
    route:
    - destination:
        host: vcluster-a
        port:
          number: 443
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vcluster-b-vs
  namespace: team-c
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingress/vcluster
  tls:
  - match:
    - port: 443
      sniHosts:
      - "vcluster-b.team-c.172.18.0.3.nip.io"
    route:
    - destination:
        host: vcluster-b
        port:
          number: 443
