manifests/istio/vcluster-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vcluster-vs
  namespace: team-c
spec:
  hosts:
  - "vcluster.team-c.172.18.0.5.nip.io"
  gateways:
  - istio-ingress/vcluster
  tls:
  - match:
    - port: 443
      sniHosts:
      - "vcluster.team-c.172.18.0.5.nip.io"
    route:
    - destination:
        host: vcluster
        port:
          number: 443
